Source/WebCore/platform/graphics/GeometryUtilities.h
@@ -47,6 +47,8 @@ FloatRect mapRect(const FloatRect&, const FloatRect& srcRect, const FloatRect& d
 WEBCORE_EXPORT FloatRect largestRectWithAspectRatioInsideRect(float aspectRatio, const FloatRect&);
 WEBCORE_EXPORT FloatRect smallestRectWithAspectRatioAroundRect(float aspectRatio, const FloatRect&);
 
+FloatSize sizeWithAreaAndAspectRatio(float area, float aspectRatio);
+
 // Compute a rect that encloses all points covered by the given rect if it were rotated a full turn around (0,0).
 FloatRect boundsOfRotatingRect(const FloatRect&);
 
